Making five card hand its own class and pokerhand abstract